changes to pom